# rust-ray-tracer

./: Cargo.toml  out.ppm  shell.nix
src/: app.rs  camera.rs  main.rs  ray.rs  vec3.rs  world.rs
