[package]
name = "ray-tracing-in-one-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
egui = "0.18.0"
eframe = { version = "0.18.0" }
rayon = "1.5.1"

[profile.release]
debug = true
